--- a/app/client/src/theme/leaflet.css
+++ b/app/client/src/theme/leaflet.css
@@ -1,5 +1,5 @@
 .leaflet-bottom.leaflet-left {
-  background-image: url("theme/logo_protezione_civile.png");
+  background-image: url("./logo_protezione_civile.png");
   width: 8%;
   height: 8%;
   left: 4px;
